#pragma once
#include <iostream>
using namespace std;

class Receiver {
public:
	void doCommand1(){
		cout << "Do Command1" << endl;
	}
	void doCommand2() {
		cout << "Do Command2" << endl;
	}
};